# cmake-rcpp-template

./: .gitmodules  DESCRIPTION  Makefile  NAMESPACE  README.md
R/: CMakeOpenCLRcppTemplate.R  OpenCLTemplateForR.R  RcppExports.R  interface.R
cmake-rcpp-template/..Rcheck/: 00install.out  CMakeRcppTemplate-manual.tex
cmake-rcpp-template/..Rcheck/CMakeRcppTemplate/: DESCRIPTION  INDEX
cmake-rcpp-template/..Rcheck/CMakeRcppTemplate/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
cmake-rcpp-template/..Rcheck/CMakeRcppTemplate/R/: CMakeRcppTemplate.rdb  CMakeRcppTemplate.rdx
cmake-rcpp-template/..Rcheck/CMakeRcppTemplate/help/: AnIndex  CMakeRcppTemplate.rdb  CMakeRcppTemplate.rdx  aliases.rds  paths.rds
cmake-rcpp-template/..Rcheck/CMakeRcppTemplate/html/: 00Index.html
cmake-rcpp-template/..Rcheck/CMakeRcppTemplate/libs/x64/: symbols.rds
man/: CLDistanceMatrix.Rd
src/: CLDistanceMatrix.cpp  CLrunif.cpp  RcppExports.cpp  RcppInterface.cpp  rnormCL.cpp  runifCL.cpp
src/backend/: CMakeLists.txt
src/backend/include/backend/: clrunif.hpp  distance_matrix.hpp  init.hpp  rnormcl.hpp  runifcl.hpp
src/backend/kernels/: distance.cl  kernel.cpp  rnorm.cl  runif.cl
src/backend/src/: CL_context.cpp  CLpp.cpp  clrunif.cpp  distance_matrix.cpp  init.cpp  rnormcl.cpp  runifcl.cpp
src/backend/src/internal/: CL_context.hpp  CLpp.hpp
